# verifiable

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Justfile  README.md  build.rs  crash.rs.txt
.github/workflows/: ci.yml
scripts/: bench_on_ref_hw.sh
src/: demo.rs  demo_impls.rs  js_bindings.rs  lib.rs  mock.rs  ring_vrf_impl.rs  ring_vrf_impl2.rs  ring_vrf_impl_old.rs  test2e9.kzg
src/ring/: bandersnatch.rs  mod.rs
utils/: generate_test_keys.rs
