[package]
name = "verifiable"
version = "0.2.0"
edition = "2021"
description = "Interface for cryptographic proof of membership of a set with known members"
authors = ["Parity Technologies <admin@parity.io>"]
repository = "https://github.com/paritytech/verifiable.git"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

exclude = ["src/ring/data/bls12-381/zcash-srs-2-16-uncompressed.bin"]

[dependencies]
derive-where = "1.2"
bounded-collections = { version = "0.1.8", default-features = false }
parity-scale-codec = { version = "3.7.4", default-features = false, features = ["derive","max-encoded-len"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }
schnorrkel = { version = "0.11.5", default-features = false, optional = true }
ark-serialize = { version = "0.5", default-features = false, features = ["derive"] }
ark-scale = { version = "0.0.13", default-features = false }
ark-vrf = { version = "0.1.1", default-features = false, features = ["bandersnatch", "ring"] }
spin = { version = "0.9", default-features = false, features = ["once"] }

[dev-dependencies]
rand = { version = "0.8", features = ["getrandom"] }
rand_core = "0.6"
paste = "1.0"

[[example]]
name = "generate_test_keys"
path = "utils/generate_test_keys.rs"

[features]
default = ["std"]
std = [
    "bounded-collections/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "schnorrkel?/std",
    "ark-serialize/std",
    "ark-scale/std",
    "ark-vrf/std",
    "ark-vrf/parallel",
]
# Include ring builder params binary data for building ring commitments.
# Disable this feature to reduce library size in production environments
# that only need to validate proofs (not build new ring commitments).
builder-params = []
schnorrkel = ["dep:schnorrkel"]
# Prover for no-std environments with deterministic ring-proof.
# Not for production, may be useful for testing.
no-std-prover = [
    "ark-vrf/test-vectors",
]
