[package]
name = "verifiable"
version = "0.5.0"
edition = "2024"
description = "Interface for cryptographic proof of membership of a set with known members"
authors = ["Parity Technologies <admin@parity.io>"]
repository = "https://github.com/paritytech/verifiable.git"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

exclude = ["src/ring/data/bls12-381/zcash-srs-2-16-uncompressed.bin"]

[dependencies]
bounded-collections = { version = "0.3.2", default-features = false, features = ["scale-codec"] }
parity-scale-codec = { version = "3.7.4", default-features = false, features = ["derive","max-encoded-len"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }
ark-serialize = { version = "0.5", default-features = false, features = ["derive"] }
ark-scale = { version = "0.0.13", default-features = false }
ark-vrf = { git = "https://github.com/davxy/ark-vrf", rev = "3e0f793", default-features = false, features = ["bandersnatch", "ring"] }
spin = { version = "0.9", default-features = false, features = ["once"] }
smallvec = { version = "1", default-features = false }
sha2 = { version = "0.10", default-features = false, optional = true }

[dev-dependencies]
rand = { version = "0.8", features = ["getrandom"] }
rand_core = "0.6"
paste = "1.0"

[[example]]
name = "generate_test_keys"
path = "utils/generate_test_keys.rs"

[features]
default = ["std"]
std = [
    "prover",
    "secret-split",
    "bounded-collections/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "ark-serialize/std",
    "ark-scale/std",
    "ark-vrf/std",
    "ark-vrf/parallel",
    "sha2?/std",
]
# Include ring builder params binary data for building ring commitments.
# Disable this feature to reduce library size in production environments
# that only need to validate proofs (not build new ring commitments).
builder-params = []
# Enables ring proof generation (prover) functionality.
prover = []
# Side-channel resistant secret scalar multiplication: the secret scalar is split
# into two random summands before being multiplied by the input point, removing the
# data dependency exploited by cache/timing attacks. Pulls `ark-std/getrandom` for
# the OS RNG, so it is only viable in `std` builds, which is also the only place a
# production prover runs. Bundled into `std` for that reason; the deterministic
# test prover does not need it.
secret-split = ["ark-vrf/secret-split"]
# Deterministic, NON-ZERO-KNOWLEDGE prover for `no_std`/test environments.
# DO NOT USE IN PRODUCTION: this enables `ark-vrf/test-vectors`, which zeroes the
# ring proof's blinding rows instead of sampling randomness. The resulting proofs
# verify normally but are trivially deanonymizable by a passive observer (the ring
# member index is recoverable from public data). Exists only so the prover can run
# in `no_std` without a system RNG, for testing.
insecure-deterministic-prover = [
    "prover",
    "ark-vrf/test-vectors",
]
# Exposes the `mock` module with a non-cryptographic `Mock` implementation
# of `GenerateVerifiable`. Intended as a test double for downstream crates
# that exercise code consuming the trait without the ring-VRF machinery.
mock = ["sha2"]

